SHOR-19: Fixed spacing issues

--- a/scss/civicrm/administer/settings/_extensions.scss
+++ b/scss/civicrm/administer/settings/_extensions.scss
@@ -62,4 +62,14 @@
       }
     }
   }
+
+  .CRM_Admin_Form_Extensions {
+    .crm-admin-optionvalue-form-block {
+      box-shadow: none;
+
+      .crm-submit-buttons {
+        border-radius: $border-radius-base;
+      }
+    }
+  }
 }
